Extra/color_palette_generator/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: #fff;
}
body {
    width: 100%;
    height: 100vh;
    background-color: #333333;
    display: flex;
    justify-content: center;
    align-items: center;
}
main {
    width: 60%;
    height: 90%;
    background-color: #444444;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border-radius: 10px;
    padding: 10px 0;
}
section {
    display: none;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    height: 50%;
    width: 100%;
}
footer {
    justify-content: center;
    align-items: center;
    flex-direction: column;
    display: flex;
    gap: 1rem;
    height: 50%;
    width: 100%;
}
.footdiv {
    height: 80%;
    width: 100%;
}
.footdiv section {
    margin-top: 20px;
}
.footdiv section .color {
    width: 100px;
    height: 200px;
    border-radius: 10px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    margin-bottom: 30px;
}
.color {
    border-radius: 10px;
    text-align: center;
    display: none;
    justify-content: center;
    align-items: center;
    font-size: 18px;
    margin-bottom: 30px;
    width: 200px;
    height: 300px;
}
button {
    width: 280px;
    height: 60px;
    border-radius: 10px;
    font-size: 23px;
    cursor: pointer;
    margin-bottom: 30px;
}
.generateBtn {
    background-color: #bc4813;
}
.generateBtn:hover {
    background-color: #85340e;
}

.saveBtn {
    background-color: #898989;
}
.saveBtn:hover {
    background-color: #5f5f5f;
}

